# AutoPatrol-Robot-ROS2

./: README.md
autopatrol_interfaces/: CMakeLists.txt  package.xml
autopatrol_robot/: README.md  package.xml  setup.py
autopatrol_robot/autopatrol_robot/: patrol_node.py  speaker.py
autopatrol_robot/config/: patrol_config.yaml
autopatrol_robot/launch/: autopatrol.launch.py  pabot_all.launch.py
nav2_custom_controller/: package.xml
nav2_custom_controller/include/nav2_custom_controller/: custom_controller.hpp
nav2_custom_controller/src/: custom_controller.cpp
nav2_custom_planner/: package.xml
nav2_custom_planner/include/nav2_custom_planner/: nav2_custom_planner.hpp
patrol_robot_application/: package.xml  setup.cfg  setup.py
patrol_robot_application/patrol_robot_application/: get_robot_pose.py  init_robot_pose.py  nav_to_pose.py  waypoint_follow.py
patrol_robot_description/: CMakeLists.txt  package.xml
patrol_robot_description/config/: display_robot_model.rviz  pabot_ros2_controller.yaml
patrol_robot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
patrol_robot_description/urdf/: first_robot.urdf  first_robot.xacro
patrol_robot_description/urdf/pabot/: base.urdf.xacro  common_inertia.xacro  pabot.urdf.xacro
patrol_robot_description/urdf/pabot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
patrol_robot_navigation2/: CMakeLists.txt  package.xml
patrol_robot_navigation2/config/: nav2_params.yaml
patrol_robot_navigation2/launch/: navigation2.launch.py
patrol_robot_navigation2/maps/: room.pgm  room.yaml
(+5 files in other folders)
